--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://example.com/kanal-avatar.jpg">
 </head>
-<body style="font-family: Arial, sans-serif; padding:20px; max-width:600px; margin:auto; line-height:1.6;">
+<body style="font-family: 'Poppins', sans-serif; background-color:#f7f7f7; color:#333; padding:30px; max-width:700px; margin:auto;">
   <header>
     <h1>deabi202 – Telegram kanali</h1>
   </header>
   <section>
-    <p>Salom! Siz <strong>deabi202</strong> Telegram kanaliga tashrif buyurdingiz. Bu yerda yangiliklar, maslahatlar, qiziqarli postlar bilan bo‘lishamiz.</p>
+    <p>Salom! Siz <strong>deabi202</strong> Telegram kanaliga tashrif buyurdingiz. Bu yerda qo'shiqlar, maslahatlar, qiziqarli postlar bilan bo‘lishamiz.</p>
   </section>
   <section>
     <p>📌 Kanalga qo‘shilish: <a href="https://t.me/deabi202" target="_blank" rel="noopener">t.me/deabi202</a></p>
