--- a/index.html
+++ b/index.html
@@ -4,27 +4,97 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>deabi202 – Telegram kanali</title>
+
+  <!-- SEO ma'lumotlar -->
   <meta name="description" content="deabi202 Telegram kanali: yangiliklar, maslahatlar va qiziqarli kontent. Qo‘shiling: t.me/deabi202">
   <meta name="keywords" content="deabi202, Telegram kanal, yangiliklar, maslahatlar">
   <meta property="og:title" content="deabi202 – Telegram kanali">
   <meta property="og:description" content="deabi202 Telegram kanali: yangiliklar, maslahatlar va qiziqarli kontent.">
   <meta property="og:url" content="https://t.me/deabi202">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://example.com/kanal-avatar.jpg">
+  <meta property="og:image" content="https://deabi202.github.io/car_4k_compressed.jpg">
+
+  <style>
+    /* Umumiy sahifa uslubi */
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: "Poppins", Arial, sans-serif;
+      color: white;
+      background-image: url('car_4k_compressed.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    /* Matnni o‘qish oson bo‘lishi uchun yarim qora qatlam */
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 40px;
+      border-radius: 20px;
+      max-width: 700px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    }
+
+    h1 {
+      font-size: 2.2rem;
+      margin-bottom: 15px;
+    }
+
+    p {
+      font-size: 1.1rem;
+      line-height: 1.6;
+    }
+
+    a.button {
+      display: inline-block;
+      margin-top: 25px;
+      padding: 12px 30px;
+      background-color: #0088cc; /* Telegram rang */
+      color: white;
+      text-decoration: none;
+      border-radius: 10px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    a.button:hover {
+      background-color: #00aaff;
+      transform: scale(1.05);
+    }
+
+    footer {
+      margin-top: 30px;
+      font-size: 0.9rem;
+      opacity: 0.8;
+    }
+  </style>
 </head>
-<body style="font-family: 'Poppins', sans-serif; background-color:#f7f7f7; color:#333; padding:30px; max-width:700px; margin:auto;">
-  <header>
-    <h1>deabi202 – Telegram kanali</h1>
-  </header>
-  <section>
-    <p>Salom! Siz <strong>deabi202</strong> Telegram kanaliga tashrif buyurdingiz. Bu yerda qo'shiqlar, maslahatlar, qiziqarli postlar bilan bo‘lishamiz.</p>
-  </section>
-  <section>
-    <p>📌 Kanalga qo‘shilish: <a href="https://t.me/deabi202" target="_blank" rel="noopener">t.me/deabi202</a></p>
-    <p>🌐 Veb shaklda postlar: <a href="https://t.me/s/deabi202" target="_blank" rel="noopener">t.me/s/deabi202</a></p>
-  </section>
-  <footer>
-    <p>&copy; 2025 deabi202 Telegram kanal. Barcha huquqlar himoyalangan.</p>
-  </footer>
+
+<body>
+  <div class="overlay">
+    <header>
+      <h1>deabi202 – Telegram kanali</h1>
+    </header>
+
+    <section>
+      <p>Salom! Siz <strong>deabi202</strong> Telegram kanaliga tashrif buyurdingiz.<br>
+      Bu yerda qo'shiqlar, maslahatlar va qiziqarli postlar bilan bo‘lishamiz.</p>
+    </section>
+
+    <section>
+      <a href="https://t.me/deabi202" class="button" target="_blank" rel="noopener">📲 Telegramga qo‘shilish</a><br>
+      <a href="https://t.me/s/deabi202" style="color:#ccc; text-decoration:none;" target="_blank" rel="noopener">👁‍🗨 Kanalni ko‘rish (veb shaklda)</a>
+    </section>
+
+    <footer>
+      <p>&copy; 2032 demK Telegram kanal. All huquqlar himoyalangan.</p>
+    </footer>
+  </div>
 </body>
 </html>
