--- a/index.html
+++ b/index.html
@@ -1,100 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="uz">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>deabi202 – Telegram kanali</title>
-
-  <!-- SEO ma'lumotlar -->
-  <meta name="description" content="deabi202 Telegram kanali: yangiliklar, maslahatlar va qiziqarli kontent. Qo‘shiling: t.me/deabi202">
-  <meta name="keywords" content="deabi202, Telegram kanal, yangiliklar, maslahatlar">
-  <meta property="og:title" content="deabi202 – Telegram kanali">
-  <meta property="og:description" content="deabi202 Telegram kanali: yangiliklar, maslahatlar va qiziqarli kontent.">
-  <meta property="og:url" content="https://t.me/deabi202">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="https://deabi202.github.io/car_4k_compressed.jpg">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>deabi202 - Telegram kanal</title>
   <style>
-    /* Umumiy sahifa uslubi */
     body {
+      background: url('car_4k_compressed.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+      text-align: center;
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      font-family: "Poppins", Arial, sans-serif;
-      color: white;
-      background-image: url('car_4k_compressed.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
     }
-
-    /* Matnni o‘qish oson bo‘lishi uchun yarim qora qatlam */
-    .overlay {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 40px;
-      border-radius: 20px;
-      max-width: 700px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    header {
+      padding: 50px 20px 20px;
     }
-
-    h1 {
-      font-size: 2.2rem;
+    header img {
+      width: 150px;
+      border-radius: 15px;
       margin-bottom: 15px;
     }
-
-    p {
-      font-size: 1.1rem;
-      line-height: 1.6;
+    h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
     }
-
-    a.button {
+    a {
       display: inline-block;
-      margin-top: 25px;
-      padding: 12px 30px;
-      background-color: #0088cc; /* Telegram rang */
+      background-color: rgba(255, 255, 255, 0.2);
       color: white;
+      padding: 12px 25px;
+      border-radius: 8px;
       text-decoration: none;
-      border-radius: 10px;
-      font-weight: bold;
+      font-size: 18px;
       transition: 0.3s;
     }
-
-    a.button:hover {
-      background-color: #00aaff;
-      transform: scale(1.05);
-    }
-
-    footer {
-      margin-top: 30px;
-      font-size: 0.9rem;
-      opacity: 0.8;
+    a:hover {
+      background-color: rgba(255, 255, 255, 0.4);
     }
   </style>
 </head>
-
 <body>
-  <div class="overlay">
-    <header>
-      <h1>deabi202 – Telegram kanali</h1>
-    </header>
-
-    <section>
-      <p>Salom! Siz <strong>deabi202</strong> Telegram kanaliga tashrif buyurdingiz.<br>
-      Bu yerda qo'shiqlar, maslahatlar va qiziqarli postlar bilan bo‘lishamiz.</p>
-    </section>
-
-    <section>
-      <a href="https://t.me/deabi202" class="button" target="_blank" rel="noopener">📲 Telegramga qo‘shilish</a><br>
-      <a href="https://t.me/s/deabi202" style="color:#ccc; text-decoration:none;" target="_blank" rel="noopener">👁‍🗨 Kanalni ko‘rish (veb shaklda)</a>
-    </section>
-
-    <footer>
-      <p>&copy; 2032 demK Telegram kanal. All huquqlar himoyalangan.</p>
-    </footer>
-  </div>
+  <header>
+    <img src="logo.png" alt="deabi202 logo">
+    <h1>deabi202 Telegram kanali</h1>
+    <p>Yangiliklar, kontent va qiziqarli postlar uchun bizga qo‘shiling!</p>
+    <a href="https://t.me/deabi202" target="_blank">Kanalga o‘tish</a>
+  </header>
 </body>
 </html>
+
