--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>deabi202 - Telegram kanal</title>
+  <link rel="icon" type="image/png" href="logo.png">
   <style>
     body {
       background: url('car_4k_compressed.jpg') no-repeat center center fixed;
