--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <header>
     <img src="logo.png" alt="deabi202 logo">
     <h1>deabi202 Telegram kanali</h1>
-    <p>Yangiliklar, kontent va qiziqarli postlar uchun bizga qo‘shiling!</p>
+    <p>Yangiliklar, qo'shiqlar va qiziqarli postlar uchun bizga qo‘shiling!</p>
     <a href="https://t.me/deabi202" target="_blank">Kanalga o‘tish</a>
   </header>
 </body>
