--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 </head>
 <body>
   <header>
+    <audio controls autoplay loop>
+  <source src="akai.mp3" type="audio/mpeg">
+  Sizning brauzeringiz audio fayllarni qo‘llab-quvvatlamaydi.
+</audio>
     <img src="logo.png" alt="deabi202 logo">
     <h1>deabi202 Telegram kanali</h1>
     <p>Yangiliklar, qo'shiqlar va qiziqarli postlar uchun bizga qo‘shiling!</p>
