--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta property="og:url" content="https://t.me/deabi202">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://example.com/kanal-avatar.jpg">
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     body {
       font-family: Arial, sans-serif;
