--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>deabi202 – Telegram kanali</title>
-  <meta name="description" content="deabi202 Telegram kanali: yangiliklar, maslahatlar va qiziqarli kontent. Qo‘shiling: t.me/deabi202">
-  <meta name="keywords" content="deabi202, Telegram kanal, yangiliklar, maslahatlar">
-  <meta property="og:title" content="deabi202 – Telegram kanali">
-  <meta property="og:description" content="deabi202 Telegram kanali: yangiliklar, maslahatlar va qiziqarli kontent.">
+  <title>mK – Telegram kanali</title>
+  <meta name="description" content="mK Telegram kanali: yangiliklar, maslahatlar va qiziqarli kontent. Qo‘shiling: t.me/deabi202">
+  <meta name="keywords" content="mK, Telegram kanal, yangiliklar, maslahatlar">
+  <meta property="og:title" content="mK – Telegram kanali">
+  <meta property="og:description" content="mK Telegram kanali: yangiliklar, maslahatlar va qiziqarli kontent.">
   <meta property="og:url" content="https://t.me/deabi202">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://example.com/kanal-avatar.jpg">
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
     body {
@@ -21,7 +20,7 @@
       text-align: center;
       background: url('car_4k_compressed.jpg') no-repeat center center fixed;
       background-size: cover;
-      backdrop-filter: blur(4px);
+      filter: brightness(1.3);
     }
     .content {
       padding: 40px;
@@ -29,12 +28,13 @@
       border-radius: 16px;
       margin: 60px auto;
       max-width: 600px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
     }
     .play-btn {
       margin-top: 20px;
       padding: 12px 30px;
       font-size: 20px;
-      border: 2px solid rgba(255, 255, 255, 0.5);
+      border: 2px solid rgba(255, 255, 255, 0.6);
       background: rgba(255, 255, 255, 0.1);
       border-radius: 12px;
       color: white;
@@ -43,24 +43,25 @@
       backdrop-filter: blur(6px);
     }
     .play-btn:hover {
-      background: rgba(255, 255, 255, 0.25);
+      background: rgba(255, 255, 255, 0.3);
       transform: scale(1.05);
     }
+    a { color: #aad; text-decoration: none; }
   </style>
 </head>
 <body>
   <div class="content">
-    <h1>deabi202 – Telegram kanali</h1>
-    <p>Salom! Siz <strong>deabi202</strong> Telegram kanaliga tashrif buyurdingiz. Bu yerda qo'shiqlar, maslahatlar, qiziqarli postlar bilan bo‘lishamiz.</p>
-    <p>📌 Kanalga qo‘shilish: <a href="https://t.me/deabi202" target="_blank" rel="noopener" style="color:#aad;">t.me/deabi202</a></p>
-    <p>🌐 Veb shaklda postlar: <a href="https://t.me/s/deabi202" target="_blank" rel="noopener" style="color:#aad;">t.me/s/deabi202</a></p>
+    <h1>mK – Telegram kanali</h1>
+    <p>Salom! Siz <strong>mK</strong> Telegram kanaliga tashrif buyurdingiz. Bu yerda qo'shiqlar, maslahatlar va qiziqarli postlar joylashgan 🎧</p>
+    <p>📌 Kanalga qo‘shilish: <a href="https://t.me/deabi202" target="_blank">t.me/deabi202</a></p>
+    <p>🌐 Postlarni ko‘rish: <a href="https://t.me/s/deabi202" target="_blank">t.me/s/deabi202</a></p>
 
-    <button class="play-btn" id="playBtn">▶️ Play Music</button>
-    <audio id="player" autoplay></audio>
+    <button class="play-btn" id="playBtn">▶️ Play AKAI</button>
+    <audio id="player" preload="auto" src="akai.mp3"></audio>
   </div>
 
   <footer style="margin-top:50px;">
-    <p>&copy; 2032 mK Telegram kanal. All huquqlar himoyalangan.</p>
+    <p>&copy; 2032 mK Telegram kanal. Barcha huquqlar himoyalangan.</p>
   </footer>
 
   <script>
@@ -68,11 +69,13 @@
     const btn = document.getElementById("playBtn");
 
     btn.addEventListener("click", () => {
-      player.src = "akai.mp3"; // bu yerda senga kerakli fayl nomi
-      player.play();
-      btn.textContent = "🎵 Playing AKAI...";
-      btn.style.opacity = "0.7";
-      btn.disabled = true;
+      player.play().then(() => {
+        btn.textContent = "🎵 Playing: AKAI";
+        btn.disabled = true;
+        btn.style.opacity = "0.7";
+      }).catch(err => {
+        alert("Iltimos, sahifani yangilab qayta urining — brauzer audio ijrosini bloklagan bo‘lishi mumkin.");
+      });
     });
   </script>
 </body>
