--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
 
   <footer style="margin-top:50px;">
-    <p>&copy; 2032 mK Telegram kanal. Barcha huquqlar himoyalangan.</p>
+    <p>&copy; 2032 mK Telegram kanal. All huquqlar himoyalangan.</p>
   </footer>
 
   <script>
@@ -74,7 +74,6 @@
         btn.disabled = true;
         btn.style.opacity = "0.7";
       }).catch(err => {
-        alert("Iltimos, sahifani yangilab qayta urining — brauzer audio ijrosini bloklagan bo‘lishi mumkin.");
       });
     });
   </script>
