--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         btn.disabled = true;
         btn.style.opacity = "0.7";
       }).catch(err => {
+        alert("Iltimos, sahifani yangilab qayta urining — brauzer audio ijrosini bloklagan bo‘lishi mumkin.");
       });
     });
   </script>
