--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>mK – Telegram kanali</title>
-  <meta name="description" content="mK Telegram kanali: yangiliklar, maslahatlar va qiziqarli kontent. Qo‘shiling: t.me/deabi202">
-  <meta name="keywords" content="mK, Telegram kanal, yangiliklar, maslahatlar">
-  <meta property="og:title" content="mK – Telegram kanali">
-  <meta property="og:description" content="mK Telegram kanali: yangiliklar, maslahatlar va qiziqarli kontent.">
+  <title>deAbi – Telegram kanali</title>
+  <meta name="description" content="deAbi Telegram kanali: qo‘shiqlar, maslahatlar va qiziqarli postlar.">
+  <meta name="keywords" content="deAbi, Telegram kanal, yangiliklar, musiqa, maslahatlar">
+  <meta property="og:title" content="deAbi – Telegram kanali">
+  <meta property="og:description" content="deAbi Telegram kanali: qo‘shiqlar, maslahatlar va qiziqarli postlar.">
   <meta property="og:url" content="https://t.me/deabi202">
   <meta property="og:type" content="website">
   <link rel="icon" type="image/png" href="favicon.png">
+
   <style>
+    /* Umumiy sahifa uslubi */
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Arial, sans-serif;
       margin: 0;
       padding: 0;
       color: white;
@@ -21,38 +23,101 @@
       background: url('car_4k_compressed.jpg') no-repeat center center fixed;
       background-size: cover;
       filter: brightness(1.15);
+      animation: fadeIn 1.5s ease-in;
     }
+
+    /* Asosiy kontent */
     .content {
       padding: 40px;
       background: rgba(0, 0, 0, 0.5);
-      border-radius: 16px;
-      margin: 60px auto;
+      border-radius: 18px;
+      margin: 8% auto;
       max-width: 600px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      box-shadow: 0 0 25px rgba(0,0,0,0.6);
+      backdrop-filter: blur(10px);
+      animation: slideUp 1.3s ease-out;
     }
+
+    /* deAbi sarlavhasi */
+    h1 {
+      font-size: 2.5em;
+      position: relative;
+      display: inline-block;
+      margin-bottom: 10px;
+    }
+
+    /* Tag chizig‘i */
+    h1::after {
+      content: "";
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background: linear-gradient(90deg, #00d4ff, #006eff);
+      border-radius: 2px;
+      animation: glowLine 2s infinite alternate;
+    }
+
+    /* Tugma */
     .play-btn {
-      margin-top: 20px;
-      padding: 12px 30px;
+      margin-top: 25px;
+      padding: 14px 35px;
       font-size: 20px;
-      border: 2px solid rgba(255, 255, 255, 0.6);
-      background: rgba(255, 255, 255, 0.1);
+      border: none;
       border-radius: 12px;
+      background: linear-gradient(90deg, #007bff, #00c3ff);
       color: white;
       cursor: pointer;
-      transition: 0.3s;
-      backdrop-filter: blur(6px);
+      transition: all 0.3s ease;
+      box-shadow: 0 0 15px rgba(0, 170, 255, 0.5);
     }
+
     .play-btn:hover {
-      background: rgba(255, 255, 255, 0.3);
-      transform: scale(1.05);
+      transform: scale(1.07);
+      box-shadow: 0 0 25px rgba(0, 200, 255, 0.8);
     }
-    a { color: #aad; text-decoration: none; }
+
+    a {
+      color: #8ecbff;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    a:hover {
+      color: #b5e3ff;
+      text-shadow: 0 0 8px #9fd8ff;
+    }
+
+    footer {
+      margin-top: 50px;
+      color: rgba(255,255,255,0.8);
+      font-size: 14px;
+    }
+
+    /* Kirish animatsiyalar */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes slideUp {
+      from { transform: translateY(30px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    @keyframes glowLine {
+      from { box-shadow: 0 0 8px #00bfff; }
+      to { box-shadow: 0 0 20px #0095ff; }
+    }
   </style>
 </head>
 <body>
   <div class="content">
-    <h1>mK – Telegram kanali</h1>
-    <p>Salom! Siz <strong>mK</strong> Telegram kanaliga tashrif buyurdingiz. Bu yerda qo'shiqlar, maslahatlar va qiziqarli postlar joylashgan 🎧</p>
+    <h1>deAbi – Telegram kanali</h1>
+    <p>Salom! Siz <strong>deAbi</strong> Telegram kanaliga tashrif buyurdingiz 🎧<br>
+       Bu yerda qo‘shiqlar, maslahatlar va qiziqarli postlar joylashgan!</p>
+
     <p>📌 Kanalga qo‘shilish: <a href="https://t.me/deabi202" target="_blank">t.me/deabi202</a></p>
     <p>🌐 Postlarni ko‘rish: <a href="https://t.me/s/deabi202" target="_blank">t.me/s/deabi202</a></p>
 
@@ -60,8 +125,8 @@
     <audio id="player" preload="auto" src="akai.mp3"></audio>
   </div>
 
-  <footer style="margin-top:50px;">
-    <p>&copy; 2032 mK Telegram kanal. All huquqlar himoyalangan.</p>
+  <footer>
+    <p>&copy; 2032 deAbi Telegram kanal. All huquqlar himoyalangan.</p>
   </footer>
 
   <script>
@@ -70,11 +135,11 @@
 
     btn.addEventListener("click", () => {
       player.play().then(() => {
-        btn.textContent = "🎵 Playing: AKAI";
+        btn.textContent = "🎶 AKAI chalinyapti...";
         btn.disabled = true;
         btn.style.opacity = "0.7";
-      }).catch(err => {
-        alert("Iltimos, sahifani yangilab qayta urining — brauzer audio ijrosini bloklagan bo‘lishi mumkin.");
+      }).catch(() => {
+        alert("Brauzer audio ijrosini bloklagan. Iltimos, sahifani yangilang yoki Play tugmasini qayta bosing.");
       });
     });
   </script>
