Add link to footer copyright notice
Updated footer text to include a link.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </div>
 
 <footer>
-  <p>&copy; 2032 deAbi Telegram kanal. All huquqlar himoyalangan.</p>
+  <p>&copy; 2032 deAbi Telegram kanal. All huquqlar himoyalangan https://chatgpt.com/gg/v/69383b0211a08190a169620b3253f74e?token=T6e07SdDvP9uDfmfUm1KPA .</p>
 </footer>
 
 <script>
